Changes in the build infrastructure
- introduce property: project.moduleprefix
- fix class- and modulepaths and JVM arguments